Change defaultconnectionn connectionstring

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=BreadApiDatabase;TrustServerCertificate=true;User Id=SA;Password=SQLConnect1;"
+    "DefaultConnection": "Server=localhost;Database=BreadApiDatabase;Trusted_Connection=false;TrustServerCertificate=True;User Id=SA;Password=SQLConnect1;"
   },
   "Logging": {
     "LogLevel": {
