--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=BreadApiDatabase;Trusted_Connection=false;TrustServerCertificate=True;User Id=SA;Password=SQLConnect1;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
